--- a/index.html
+++ b/index.html
@@ -23,21 +23,32 @@
 <body class="bg-light">
 	<div class="container">
 		<h1 class="my-4 text-center">Check Patient Status</h1>
+
 		<div class="card p-4 mb-4">
-			<div class="form-group">
+			<div class="d-flex justify-content-around">
+				<span class="badge badge-success">ATIVO</span>
+				<span class="badge badge-warning">NÃ£o Encontrado</span>
+				<span class="badge badge-danger">INATIVO</span>
+			</div>
+
+			<div class="form-group pt-4">
 				<label for="pdfUpload">Upload PDF</label>
 				<input type="file" class="form-control-file" id="pdfUpload" accept="application/pdf">
 			</div>
+
 			<div class="form-group">
 				<label for="excelUpload">Upload Excel</label>
 				<input type="file" class="form-control-file" id="excelUpload" accept=".xlsx">
 			</div>
+
 			<button id="checkStatusButton" class="btn btn-primary btn-block">Check Patient Status</button>
 			<button id="clearResultsButton" class="btn btn-secondary btn-block mt-2">Clear Results</button>
 			<div id="loading" class="text-center my-3">Loading...</div>
+
 		</div>
+
+
 		<div id="result" class="card p-4">
-			<!-- Os resultados aparecerão aqui -->
 		</div>
 	</div>
 
